noinst_LIBRARIES = libmndo.a

libmndo_a_SOURCES =                               \
ACHECK.f  ADDDSP.f  ADDFCK.f  ADDHCR.f  ADDNUC.f  \
ASSEL.f   ASSYM.f   ATMASS.f  AXIS.f    BANGLE.f  \
BDATA4.f  BETAIJ.f  BETLOW.f  BETOM.f   BETOR3.f  \
BETORT.f  BLOCK0.f  BLOCK1.f  BLOCK2.f  BLOCK3.f  \
BLOCK4.f  BMAT3.f   BONTYP.f  BORDER.f  BSYM.f    \
CALREF.f  CCPROD.f  CHKANA.f  CIS.f     CMOVE.f   \
CODISK.f  COMPFG.f  CONSTS.f  CORDEF.f  COREXT.f  \
CORGAU.f  CORGTO.f  COROM.f   COROM2.f  CORPP2.f  \
CORREP.f  COSOLV.f  CPARAM.f  CPUSEC.f  CREP.f    \
CSYM.f    DAWERT.f  DAWT.f    DCART.f   DCART2.f  \
DDPOHY.f  DDPOUT.f  DEGMO.f   DENEXT.f  DENSAV.f  \
DFPSAV.f  DGPERT.f  DGRAD.f   DHCORE.f  DIAG.f    \
DIAGON.f  DIELEN.f  DIGIT.f   DIHED.f   DIIS.f    \
DIPOLE.f  DMAT.f    DSPMM.f   DVFILL.f  DYNCSM.f  \
DYNDIA.f  DYNFOR.f  DYNGUG.f  DYNINT.f  DYNPT.f   \
DYNSCF.f  DYNSCR.f  EATOM.f   ECPDEF.f  ECPPOT.f  \
ECPSET.f  EFPERT.f  EFSAV.f   EIGF.f    EINVIT.f  \
EPSLON.f  EQLRAT.f  ERGCON.f  ERRT.f    ESCF.f    \
ESTIM.f   ESTPI1.f  EWWRSP.f  EXCHNG.f  EXTERN.f  \
FBINOM.f  FIELD.f   FLEPO.f   FMATRX.f  FMTRX.f   \
FMTRXA.f  FMTRXP.f  FOCK.f    FOCK1.f   FOCK2.f   \
FOCK2D.f  FOCKX.f   FORCE.f   FORHE.f   FORMD.f   \
FORMD1.f  FORMD2.f  FORSAV.f  FSTMIN.f  GAMGEN.f  \
GCHECK.f  GEOOPT.f  GEOSAV.f  GETGEG.f  GETGEO.f  \
GETHES.f  GETNAM.f  GETSYM.f  GETTXT.f  GETVAL.f  \
GMETRY.f  GRAPH.f   GRAPH2.f  GRID.f    GRIDP.f   \
GSCALE.f  GTOHYF.f  GTOMIN.f  GTPREP.f  GUESSP.f  \
GUGA.f    GUGAFU.f  HBONDT.f  HCORE.f   HCOREP.f  \
HECOR.f   HFZERO.f  HHPAIR.f  INDEXX.f  INEIGF.f  \
INERT.f   INGUGA.f  INIGHD.f  INIPOT.f  INITSV.f  \
INPANA.f  INPATH.f  INPERT.f  INPNMR.f  INPOCC.f  \
INPUT.f   INQMMM.f  INREF.f   INTENS.f  ISOMAS.f  \
ITER.f    KEYADD.f  KEYCHK.f  KEYDEF.f  KEYDOC.f  \
KEYGET.f  KEYWRT.f  LINEAR.f  LINMIN.f  LOCMIN.f  \
MATOUT.f  MATPRT.f  MBONDS.f  METHOD.f  MINDO.f   \
MINICI.f  MLIG.f    MMINT.f   MMOKF.f   MMOKG.f   \
MMOKIN.f  MNDOH.f   MODPAR.f  MODPOT.f  MOINT2.f  \
MOINT3.f  MOOUT.f   MOREF.f   MOSYM.f   MPARAM.f  \
MPCPOP.f  MPCSYB.f  MPEN.f    MULLIK.f  MYWORD.f  \
NMRAVG.f  NMRCHK.f  NMRPRT.f  NNEIGH.f  NUCHAR.f  \
NUMBAS.f  OCCDEF.f  OCCSTD.f  OCCSYM.f  OM2SAV.f  \
OUTREF.f  OVEREF.f  OVERLP.f  OVRLP2.f  PARAM.f   \
PARAMD.f  PARAME.f  PARDEF.f  PARNMR.f  PAROUT.f  \
PATH.f    PATHP.f   PDBSAV.f  PERT.f    PIMOCI.f  \
POIJ.f    PPECP.f   PQDEN.f   PROPRT.f  PRTCIS.f  \
PRTCSM.f  PRTDFP.f  PRTEXC.f  PRTGUG.f  PRTHDL.f  \
PRTINP.f  PRTPAR.f  PRTSCF.f  PSORT.f   PYTHAG.f  \
QMINT.f   QMINTC.f  QMMDER.f  QMMF.f    QMMOUT.f  \
QMMPOT.f  READA.f   READMO.f  REFSAV.f  RENORM.f  \
REPAM1.f  REPGAU.f  REPP.f    REPPD.f   RESET2.f  \
RIJCHK.f  RIJPRT.f  ROTATE.f  ROTBET.f  ROTCOH.f  \
ROTD.f    ROTMAT.f  RSC.f     SCF.f     SCFCAL.f  \
SCFRES.f  SCFSAV.f  SCREEN.f  SET.f     SETUPS.f  \
SMHALF.f  SPCG.f    SPCW.f    SPGTO2.f  SPOVER.f  \
SQUARE.f  SS.f      START.f   STONG.f   SYMNUM.f  \
SYMREF.f  SYMTRY.f  TDIAG.f   THERMO.f  TQL2.f    \
TRANS4.f  TRBAK1.f  TRBAK3.f  TRDEF.f   TRED1.f   \
TRED2.f   TRED3.f   TSOPT.f   TSSAV.f   TXCOPY.f  \
UPCASE.f  UPDHES.f  VALPOT.f  VECPRT.f  VECSYM.f  \
VECTYP.f  VERTEX.f  W2LIN.f   W2MAT.f   WINT.f    \
WORDER.f  WSTORE.f  WSTORP.f  WWSTEP.f  ZLIMIT.f  \
ZZERO.f   INPDIR.f  DYNDIR.f  TRPDIF.f  DYNDEF.f  \
DYNANA.f  DYNDMS.f  DYNMEM.f  DYNOM2.f  DYNSPA.f  \
PRTNCG.f  PRTDIA.f  INFRG.f   SORTIX.f  GUGREF.f  \
PDDG.f    PDBINP.f  GRAPHM.f  MOLDIN.f  INPSCF.f  \
DYNVB.f   MMINTE.f  AINVRS.f  REPP0.f   ROTHSP.f  \
DIRECT.f  PONEP.f   HFOCKP.f  FOCK1P.f  ROTBP.f   \
ROTCP.f   ESCFP.f   DIISP.f   BORDP1.f  BORDP2.f  \
MATDEB.f  MATCOP.f  MATDIF.f  MATUPD.f  FRAGMT.f  \
DYNFRG.f  SCFFRG.f  ITFRG.f   DEFFRG.f  COPFRG.f  \
INPUTS.f  DOTMAT.f  INCONI.f  INEXDY.f  GEOGRD.f  \
BLOCK5.f  INMULS.f  MOMSAV.f  ERRSAV.f  MMDPI.f   \
MMDPE.f   MMDPG.f   ADDGFX.f  ADDGMU.f  GCRGDR.f  \
INGSBP.f  OGSBP.f   CHKLRO.f  SMEAR.f   PASPIN.f  \
OCCFLO.f  PRTGPU.f  CLRGUG.f  QMMDR1.f  HCORR.f   \
PATHL.f

LIMIT.o: ../LIMIT.f90
	$(F90) $(FREE)$(FFLAGS2_MNDO) -c ../LIMIT.f90

ACHECK.o: ACHECK.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ACHECK.f

ADDDSP.o: ADDDSP.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ADDDSP.f

ADDFCK.o: ADDFCK.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ADDFCK.f

ADDHCR.o: ADDHCR.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ADDHCR.f

ADDNUC.o: ADDNUC.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ADDNUC.f

ASSEL.o: ASSEL.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ASSEL.f

ASSYM.o: ASSYM.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ASSYM.f

ATMASS.o: ATMASS.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ATMASS.f

AXIS.o: AXIS.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c AXIS.f

BANGLE.o: BANGLE.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c BANGLE.f

BDATA4.o: BDATA4.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c BDATA4.f

BETAIJ.o: BETAIJ.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c BETAIJ.f

BETLOW.o: BETLOW.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c BETLOW.f

BETOM.o: BETOM.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c BETOM.f

BETOR3.o: BETOR3.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c BETOR3.f

BETORT.o: BETORT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c BETORT.f

BLOCK0.o: BLOCK0.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c BLOCK0.f

BLOCK1.o: BLOCK1.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c BLOCK1.f

BLOCK2.o: BLOCK2.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c BLOCK2.f

BLOCK3.o: BLOCK3.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c BLOCK3.f

BLOCK4.o: BLOCK4.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c BLOCK4.f

BLOCK5.o: BLOCK5.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c BLOCK5.f

BMAT3.o: BMAT3.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c BMAT3.f

BONTYP.o: BONTYP.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c BONTYP.f

BORDER.o: BORDER.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c BORDER.f

BSYM.o: BSYM.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c BSYM.f

CALREF.o: CALREF.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c CALREF.f

CCPROD.o: CCPROD.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c CCPROD.f

CHKANA.o: CHKANA.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c CHKANA.f

CIS.o: CIS.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c CIS.f

CMOVE.o: CMOVE.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c CMOVE.f

CODISK.o: CODISK.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c CODISK.f

COMPFG.o: COMPFG.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c COMPFG.f

CONSTS.o: CONSTS.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c CONSTS.f

CORDEF.o: CORDEF.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c CORDEF.f

COREXT.o: COREXT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c COREXT.f

CORGAU.o: CORGAU.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c CORGAU.f

# Reducing the optimization level for the following file
# may avoid some failing tests for ifort 14.0 and higher.
# It also improves stability using ifort 13.1.
CORGTO.o: CORGTO.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c CORGTO.f

COROM.o: COROM.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c COROM.f

COROM2.o: COROM2.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c COROM2.f

CORPP2.o: CORPP2.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c CORPP2.f

CORREP.o: CORREP.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c CORREP.f

COSOLV.o: COSOLV.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c COSOLV.f

CPARAM.o: CPARAM.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c CPARAM.f

CPUSEC.o: CPUSEC.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c CPUSEC.f

CREP.o: CREP.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c CREP.f

CSYM.o: CSYM.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c CSYM.f

DAWERT.o: DAWERT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DAWERT.f

DAWT.o: DAWT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DAWT.f

DCART.o: DCART.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DCART.f

DCART2.o: DCART2.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DCART2.f

DDPOHY.o: DDPOHY.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DDPOHY.f

DDPOUT.o: DDPOUT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DDPOUT.f

DEGMO.o: DEGMO.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DEGMO.f

DENEXT.o: DENEXT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DENEXT.f

DENSAV.o: DENSAV.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DENSAV.f

DFPSAV.o: DFPSAV.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DFPSAV.f

DGPERT.o: DGPERT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DGPERT.f

DGRAD.o: DGRAD.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DGRAD.f

DHCORE.o: DHCORE.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DHCORE.f

DIAG.o: DIAG.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DIAG.f

DIAGON.o: DIAGON.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DIAGON.f

DIELEN.o: DIELEN.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DIELEN.f

DIGIT.o: DIGIT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DIGIT.f

DIHED.o: DIHED.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DIHED.f

DIIS.o: DIIS.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DIIS.f

DIPOLE.o: DIPOLE.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DIPOLE.f

DMAT.o: DMAT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DMAT.f

DSPMM.o: DSPMM.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DSPMM.f

DVFILL.o: DVFILL.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DVFILL.f

DYNCSM.o: DYNCSM.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DYNCSM.f

DYNDIA.o: DYNDIA.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DYNDIA.f

DYNFOR.o: DYNFOR.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DYNFOR.f

DYNGUG.o: DYNGUG.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DYNGUG.f

DYNINT.o: DYNINT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DYNINT.f

DYNPT.o: DYNPT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DYNPT.f

DYNSCF.o: DYNSCF.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DYNSCF.f

DYNSCR.o: DYNSCR.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DYNSCR.f

EATOM.o: EATOM.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c EATOM.f

ECPDEF.o: ECPDEF.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ECPDEF.f

ECPPOT.o: ECPPOT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ECPPOT.f

ECPSET.o: ECPSET.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ECPSET.f

EFPERT.o: EFPERT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c EFPERT.f

EFSAV.o: EFSAV.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c EFSAV.f

EIGF.o: EIGF.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c EIGF.f

EINVIT.o: EINVIT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c EINVIT.f

EPSLON.o: EPSLON.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c EPSLON.f

EQLRAT.o: EQLRAT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c EQLRAT.f

ERGCON.o: ERGCON.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ERGCON.f

ERRT.o: ERRT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ERRT.f

ESCF.o: ESCF.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ESCF.f

ESTIM.o: ESTIM.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ESTIM.f

ESTPI1.o: ESTPI1.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ESTPI1.f

EWWRSP.o: EWWRSP.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c EWWRSP.f

EXCHNG.o: EXCHNG.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c EXCHNG.f

EXTERN.o: EXTERN.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c EXTERN.f

FBINOM.o: FBINOM.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c FBINOM.f

FIELD.o: FIELD.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c FIELD.f

FLEPO.o: FLEPO.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c FLEPO.f

FMATRX.o: FMATRX.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c FMATRX.f

FMTRX.o: FMTRX.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c FMTRX.f

FMTRXA.o: FMTRXA.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c FMTRXA.f

FMTRXP.o: FMTRXP.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c FMTRXP.f

FOCK.o: FOCK.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c FOCK.f

FOCK1.o: FOCK1.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c FOCK1.f

FOCK2.o: FOCK2.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c FOCK2.f

FOCK2D.o: FOCK2D.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c FOCK2D.f

FOCKX.o: FOCKX.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c FOCKX.f

FORCE.o: FORCE.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c FORCE.f

FORHE.o: FORHE.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c FORHE.f

FORMD.o: FORMD.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c FORMD.f

FORMD1.o: FORMD1.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c FORMD1.f

FORMD2.o: FORMD2.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c FORMD2.f

FORSAV.o: FORSAV.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c FORSAV.f

FSTMIN.o: FSTMIN.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c FSTMIN.f

GAMGEN.o: GAMGEN.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GAMGEN.f

GCHECK.o: GCHECK.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GCHECK.f

GEOOPT.o: GEOOPT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GEOOPT.f

GEOSAV.o: GEOSAV.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GEOSAV.f

GETGEG.o: GETGEG.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GETGEG.f

GETGEO.o: GETGEO.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GETGEO.f

GETHES.o: GETHES.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GETHES.f

GETNAM.o: GETNAM.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GETNAM.f

GETSYM.o: GETSYM.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GETSYM.f

GETTXT.o: GETTXT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GETTXT.f

GETVAL.o: GETVAL.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GETVAL.f

GMETRY.o: GMETRY.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GMETRY.f

GRAPH.o: GRAPH.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GRAPH.f

GRAPH2.o: GRAPH2.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GRAPH2.f

GRID.o: GRID.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GRID.f

GRIDP.o: GRIDP.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GRIDP.f

GSCALE.o: GSCALE.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GSCALE.f

GTOHYF.o: GTOHYF.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GTOHYF.f

GTOMIN.o: GTOMIN.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GTOMIN.f

GTPREP.o: GTPREP.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GTPREP.f

GUESSP.o: GUESSP.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GUESSP.f

GUGA.o: GUGA.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GUGA.f

GUGAFU.o: GUGAFU.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GUGAFU.f

HBONDT.o: HBONDT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c HBONDT.f

HCORE.o: HCORE.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c HCORE.f

HCOREP.o: HCOREP.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c HCOREP.f

HECOR.o: HECOR.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c HECOR.f

HFZERO.o: HFZERO.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c HFZERO.f

HHPAIR.o: HHPAIR.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c HHPAIR.f

INDEXX.o: INDEXX.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INDEXX.f

INEIGF.o: INEIGF.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INEIGF.f

INERT.o: INERT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INERT.f

INGUGA.o: INGUGA.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INGUGA.f

INIGHD.o: INIGHD.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INIGHD.f

INIPOT.o: INIPOT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INIPOT.f

INITSV.o: INITSV.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INITSV.f

INPANA.o: INPANA.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INPANA.f

INPATH.o: INPATH.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INPATH.f

INPERT.o: INPERT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INPERT.f

INPNMR.o: INPNMR.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INPNMR.f

INPOCC.o: INPOCC.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INPOCC.f

INPUT.o: INPUT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INPUT.f

INQMMM.o: INQMMM.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INQMMM.f

INREF.o: INREF.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INREF.f

INTENS.o: INTENS.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INTENS.f

ISOMAS.o: ISOMAS.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ISOMAS.f

ITER.o: ITER.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ITER.f

KEYADD.o: KEYADD.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c KEYADD.f

KEYCHK.o: KEYCHK.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c KEYCHK.f

KEYDEF.o: KEYDEF.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c KEYDEF.f

KEYDOC.o: KEYDOC.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c KEYDOC.f

KEYGET.o: KEYGET.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c KEYGET.f

KEYWRT.o: KEYWRT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c KEYWRT.f

# For the following file the optimization level may cause
# errors with some compilers. Reduce level if necessary.
LINEAR.o: LINEAR.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c LINEAR.f

LINMIN.o: LINMIN.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c LINMIN.f

LOCMIN.o: LOCMIN.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c LOCMIN.f

MATOUT.o: MATOUT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MATOUT.f

MATPRT.o: MATPRT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MATPRT.f

MBONDS.o: MBONDS.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MBONDS.f

METHOD.o: METHOD.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c METHOD.f

MINDO.o: MINDO.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MINDO.f

MINICI.o: MINICI.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MINICI.f

MLIG.o: MLIG.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MLIG.f

MMINT.o: MMINT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MMINT.f

MMOKF.o: MMOKF.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MMOKF.f

MMOKG.o: MMOKG.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MMOKG.f

MMOKIN.o: MMOKIN.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MMOKIN.f

MNDOH.o: MNDOH.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MNDOH.f

MODPAR.o: MODPAR.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MODPAR.f

MODPOT.o: MODPOT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MODPOT.f

MOINT2.o: MOINT2.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MOINT2.f

MOINT3.o: MOINT3.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MOINT3.f

MOOUT.o: MOOUT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MOOUT.f

MOREF.o: MOREF.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MOREF.f

MOSYM.o: MOSYM.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MOSYM.f

MPARAM.o: MPARAM.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MPARAM.f

MPCPOP.o: MPCPOP.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MPCPOP.f

MPCSYB.o: MPCSYB.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MPCSYB.f

MPEN.o: MPEN.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MPEN.f

MULLIK.o: MULLIK.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MULLIK.f

MYWORD.o: MYWORD.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MYWORD.f

NMRAVG.o: NMRAVG.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c NMRAVG.f

NMRCHK.o: NMRCHK.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c NMRCHK.f

NMRPRT.o: NMRPRT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c NMRPRT.f

NNEIGH.o: NNEIGH.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c NNEIGH.f

NUCHAR.o: NUCHAR.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c NUCHAR.f

NUMBAS.o: NUMBAS.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c NUMBAS.f

OCCDEF.o: OCCDEF.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c OCCDEF.f

OCCSTD.o: OCCSTD.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c OCCSTD.f

OCCSYM.o: OCCSYM.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c OCCSYM.f

OM2SAV.o: OM2SAV.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c OM2SAV.f

OUTREF.o: OUTREF.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c OUTREF.f

OVEREF.o: OVEREF.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c OVEREF.f

OVERLP.o: OVERLP.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c OVERLP.f

OVRLP2.o: OVRLP2.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c OVRLP2.f

PARAM.o: PARAM.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PARAM.f

PARAMD.o: PARAMD.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PARAMD.f

PARAME.o: PARAME.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PARAME.f

PARDEF.o: PARDEF.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PARDEF.f

PARNMR.o: PARNMR.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PARNMR.f

PAROUT.o: PAROUT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PAROUT.f

PATH.o: PATH.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PATH.f

PATHP.o: PATHP.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PATHP.f

PDBSAV.o: PDBSAV.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PDBSAV.f

PERT.o: PERT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PERT.f

PIMOCI.o: PIMOCI.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PIMOCI.f

POIJ.o: POIJ.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c POIJ.f

PPECP.o: PPECP.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PPECP.f

PQDEN.o: PQDEN.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PQDEN.f

PROPRT.o: PROPRT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PROPRT.f

PRTCIS.o: PRTCIS.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PRTCIS.f

PRTCSM.o: PRTCSM.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PRTCSM.f

PRTDFP.o: PRTDFP.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PRTDFP.f

PRTEXC.o: PRTEXC.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PRTEXC.f

PRTGUG.o: PRTGUG.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PRTGUG.f

PRTHDL.o: PRTHDL.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PRTHDL.f

PRTINP.o: PRTINP.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PRTINP.f

PRTPAR.o: PRTPAR.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PRTPAR.f

PRTSCF.o: PRTSCF.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PRTSCF.f

PSORT.o: PSORT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PSORT.f

PYTHAG.o: PYTHAG.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PYTHAG.f

QMINT.o: QMINT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c QMINT.f

QMINTC.o: QMINTC.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c QMINTC.f

QMMDER.o: QMMDER.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c QMMDER.f

QMMF.o: QMMF.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c QMMF.f

QMMOUT.o: QMMOUT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c QMMOUT.f

QMMPOT.o: QMMPOT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c QMMPOT.f

READA.o: READA.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c READA.f

READMO.o: READMO.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c READMO.f

REFSAV.o: REFSAV.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c REFSAV.f

RENORM.o: RENORM.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c RENORM.f

REPAM1.o: REPAM1.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c REPAM1.f

REPGAU.o: REPGAU.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c REPGAU.f

REPP.o: REPP.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c REPP.f

REPPD.o: REPPD.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c REPPD.f

RESET2.o: RESET2.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c RESET2.f

RIJCHK.o: RIJCHK.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c RIJCHK.f

RIJPRT.o: RIJPRT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c RIJPRT.f

ROTATE.o: ROTATE.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ROTATE.f

ROTBET.o: ROTBET.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ROTBET.f

ROTCOH.o: ROTCOH.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ROTCOH.f

ROTD.o: ROTD.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ROTD.f

ROTMAT.o: ROTMAT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ROTMAT.f

RSC.o: RSC.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c RSC.f

SCF.o: SCF.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c SCF.f

SCFCAL.o: SCFCAL.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c SCFCAL.f

SCFRES.o: SCFRES.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c SCFRES.f

SCFSAV.o: SCFSAV.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c SCFSAV.f

SCREEN.o: SCREEN.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c SCREEN.f

SET.o: SET.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c SET.f

SETUPS.o: SETUPS.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c SETUPS.f

SMHALF.o: SMHALF.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c SMHALF.f

SPCG.o: SPCG.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c SPCG.f

SPCW.o: SPCW.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c SPCW.f

SPGTO2.o: SPGTO2.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c SPGTO2.f

SPOVER.o: SPOVER.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c SPOVER.f

# For the following file the optimization level may cause
# errors with some compilers. Reduce level if necessary.
SQUARE.o: SQUARE.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c SQUARE.f

SS.o: SS.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c SS.f

START.o: START.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c START.f

STONG.o: STONG.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c STONG.f

SYMNUM.o: SYMNUM.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c SYMNUM.f

SYMREF.o: SYMREF.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c SYMREF.f

SYMTRY.o: SYMTRY.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c SYMTRY.f

TDIAG.o: TDIAG.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c TDIAG.f

THERMO.o: THERMO.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c THERMO.f

TQL2.o: TQL2.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c TQL2.f

TRANS4.o: TRANS4.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c TRANS4.f

TRBAK1.o: TRBAK1.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c TRBAK1.f

TRBAK3.o: TRBAK3.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c TRBAK3.f

TRDEF.o: TRDEF.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c TRDEF.f

# Reducing the optimization level for the following file
# may avoid some failing tests for ifort 14.0 and higher.
# It also improves stability using ifort 13.1.
TRED1.o: TRED1.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c TRED1.f

TRED2.o: TRED2.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c TRED2.f

TRED3.o: TRED3.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c TRED3.f

TSOPT.o: TSOPT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c TSOPT.f

TSSAV.o: TSSAV.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c TSSAV.f

TXCOPY.o: TXCOPY.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c TXCOPY.f

UPCASE.o: UPCASE.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c UPCASE.f

UPDHES.o: UPDHES.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c UPDHES.f

VALPOT.o: VALPOT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c VALPOT.f

VECPRT.o: VECPRT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c VECPRT.f

VECSYM.o: VECSYM.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c VECSYM.f

VECTYP.o: VECTYP.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c VECTYP.f

VERTEX.o: VERTEX.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c VERTEX.f

W2LIN.o: W2LIN.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c W2LIN.f

W2MAT.o: W2MAT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c W2MAT.f

WINT.o: WINT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c WINT.f

WORDER.o: WORDER.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c WORDER.f

WSTORE.o: WSTORE.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c WSTORE.f

WSTORP.o: WSTORP.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c WSTORP.f

WWSTEP.o: WWSTEP.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c WWSTEP.f

ZLIMIT.o: ZLIMIT.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ZLIMIT.f

ZZERO.o: ZZERO.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ZZERO.f

INPDIR.o: INPDIR.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INPDIR.f

MATCOP.o: MATCOP.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MATCOP.f

MATDIF.o: MATDIF.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MATDIF.f

MATUPD.o: MATUPD.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MATUPD.f

DIRECT.o: DIRECT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DIRECT.f

DYNDIR.o: DYNDIR.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DYNDIR.f

ESCFP.o: ESCFP.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ESCFP.f

HFOCKP.o: HFOCKP.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c HFOCKP.f

PONEP.o: PONEP.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PONEP.f

ROTBP.o: ROTBP.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ROTBP.f

ROTCP.o: ROTCP.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ROTCP.f

FOCK1P.o: FOCK1P.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c FOCK1P.f

TRPDIF.o: TRPDIF.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c TRPDIF.f

DIISP.o: DIISP.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DIISP.f

BORDP1.o: BORDP1.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c BORDP1.f

BORDP2.o: BORDP2.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c BORDP2.f

DYNDEF.o: DYNDEF.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DYNDEF.f

DYNANA.o: DYNANA.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DYNANA.f

DYNDMS.o: DYNDMS.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DYNDMS.f

DYNMEM.o: DYNMEM.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DYNMEM.f

DYNOM2.o: DYNOM2.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DYNOM2.f

DYNSPA.o: DYNSPA.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DYNSPA.f

MATDEB.o: MATDEB.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MATDEB.f

PRTNCG.o: PRTNCG.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PRTNCG.f

PRTDIA.o: PRTDIA.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PRTDIA.f

FRAGMT.o: FRAGMT.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c FRAGMT.f

INFRG.o: INFRG.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INFRG.f

DEFFRG.o: DEFFRG.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DEFFRG.f

INPUTS.o: INPUTS.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INPUTS.f

DYNFRG.o: DYNFRG.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DYNFRG.f

SCFFRG.o: SCFFRG.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c SCFFRG.f

ITFRG.o: ITFRG.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ITFRG.f

COPFRG.o: COPFRG.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c COPFRG.f

SORTIX.o: SORTIX.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c SORTIX.f

GUGREF.o: GUGREF.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GUGREF.f

PDDG.o: PDDG.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PDDG.f

PDBINP.o: PDBINP.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PDBINP.f

GRAPHM.o: GRAPHM.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GRAPHM.f

MOLDIN.o: MOLDIN.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MOLDIN.f

INPSCF.o: INPSCF.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INPSCF.f

DYNVB.o: DYNVB.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c DYNVB.f

MMINTE.o: MMINTE.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MMINTE.f

AINVRS.o: AINVRS.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c AINVRS.f

REPP0.o: REPP0.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c REPP0.f

ROTHSP.o: ROTHSP.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ROTHSP.f

DOTMAT.o: DOTMAT.f
	$(F90) $(FIXED)$(FFLAGS2_CGDMS) -c DOTMAT.f

INCONI.o: INCONI.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INCONI.f

INEXDY.o: INEXDY.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INEXDY.f

GEOGRD.o: GEOGRD.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GEOGRD.f

INMULS.o: INMULS.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INMULS.f

MOMSAV.o: MOMSAV.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MOMSAV.f

ERRSAV.o: ERRSAV.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ERRSAV.f

MMDPI.o: MMDPI.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MMDPI.f

MMDPE.o: MMDPE.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MMDPE.f

MMDPG.o: MMDPG.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c MMDPG.f

HCORR.o: HCORR.f90 LIMIT.o
	$(F90) $(FREE)$(FFLAGS2_MNDO) -c HCORR.f90

ADDGFX.o: ADDGFX.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ADDGFX.f

ADDGMU.o: ADDGMU.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c ADDGMU.f

GCRGDR.o: GCRGDR.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c GCRGDR.f

INGSBP.o: INGSBP.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c INGSBP.f

OGSBP.o: OGSBP.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c OGSBP.f

CHKLRO.o: CHKLRO.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c CHKLRO.f

SMEAR.o: SMEAR.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c SMEAR.f

PASPIN.o: PASPIN.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PASPIN.f

OCCFLO.o: OCCFLO.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c OCCFLO.f

PRTGPU.o: PRTGPU.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PRTGPU.f

CLRGUG.o: CLRGUG.f
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c CLRGUG.f

QMMDR1.o: QMMDR1.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c QMMDR1.f

PATHL.o: PATHL.f LIMIT.o
	$(F90) $(FIXED)$(FFLAGS2_MNDO) -c PATHL.f
